[package]
authors = ["Maurice Kayser"]
edition = "2018"
keywords = ["ffi", "nt", "ntapi", "syscall", "sysenter", "win32", "winapi", "windows"]
license = "MIT/Apache-2.0"
name = "winapi2"
readme = "README.md"
version = "0.1.0"

[dependencies]
bitfield = { git = "https://github.com/MauriceKayser/rs-bitfield", rev = "789b48a" }
enum_extensions = { git = "https://github.com/MauriceKayser/rs-enum_extensions", rev = "ddd00db" }