[package]
authors = ["Maurice Kayser"]
edition = "2021"
keywords = ["ffi", "nt", "ntapi", "syscall", "sysenter", "win32", "winapi", "windows"]
license = "MIT/Apache-2.0"
name = "winapi2"
readme = "README.md"
version = "0.1.0"

[dependencies]
bitfield = { git = "https://github.com/MauriceKayser/rs-bitfield", rev = "7b58bfce81d6c8b9b4eba71c77cbbccf60731abc" }

[features]
builtins = []